Code cleanup; removing unnecessary files.

--- a/attr.html
+++ b/attr.html
@@ -1,5 +1,6 @@
 <hr>
+<div class="credits">
+Click on points to see more data.
 
-Click on points to see more contextual data.
-
-Map made by <a href='http://jasonheppler.org'>Jason A. Heppler</a>. Data provided by the Nebraska Department of Roads.
+Research project of Dr. Jeanne Reames, University of Nebraska at Omaha. Map made by Cory Starman and <a href='http://jasonheppler.org'>Jason A. Heppler</a>.
+</div>
